feat: 요구사항 6 구현(수정 필요)